# apps/api/src/modules/objects/dto/object-response.dto.ts
@@ -1,0 +1,60 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { ObjectFieldDto } from './object-definitions.dto';
+
+export class ObjectDefinitionDto {
+  @ApiProperty({ format: 'uuid' })
+  id!: string;
+
+  @ApiProperty()
+  externalReferenceCode!: string;
+
+  @ApiProperty({ format: 'uuid' })
+  tenantId!: string;
+
+  @ApiProperty({ format: 'date-time' })
+  createdAt!: string;
+
+  @ApiProperty({ format: 'date-time' })
+  updatedAt!: string;
+
+  @ApiProperty({ format: 'uuid', nullable: true })
+  createdBy!: string | null;
+
+  @ApiProperty()
+  name!: string;
+
+  @ApiProperty()
+  pluralName!: string;
+
+  @ApiProperty({ nullable: true })
+  description!: string | null;
+
+  @ApiProperty({ type: [ObjectFieldDto] })
+  fields!: ObjectFieldDto[];
+}
+
+export class ObjectRecordDto {
+  @ApiProperty({ format: 'uuid' })
+  id!: string;
+
+  @ApiProperty()
+  externalReferenceCode!: string;
+
+  @ApiProperty({ format: 'uuid' })
+  tenantId!: string;
+
+  @ApiProperty({ format: 'date-time' })
+  createdAt!: string;
+
+  @ApiProperty({ format: 'date-time' })
+  updatedAt!: string;
+
+  @ApiProperty({ format: 'uuid', nullable: true })
+  createdBy!: string | null;
+
+  @ApiProperty({ format: 'uuid' })
+  objectDefinitionId!: string;
+
+  @ApiProperty({ type: 'object', additionalProperties: true })
+  data!: Record<string, unknown>;
+}
